syntax = "proto3";

package user;

// The user service definition.
service UserService {
    rpc CreateUser (NewUser) returns (User) {}
    rpc ReadUser (User) returns (User) {}
    rpc UpdateUser (User) returns (User) {}
    rpc DeleteUser (User) returns (User) {}
}

// The request message containing the new user data.
message NewUser {
  string name = 1;
  string email = 2;
  string password = 3;
}

// The response message containing the user data
message User {
    string id = 1;
    string name = 2;
    string email = 3;
}